--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ header > ul {
     background-color: rgba(0, 0, 0, 0.692);
 }
 
-
 .home{
     width: 100%;
     height: 100vh;
@@ -103,6 +102,8 @@ header > ul {
     padding: 3rem;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.800);
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -121,6 +122,8 @@ header > ul {
     justify-content: space-around;
     text-align: center;
     width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .servicos li:hover{
