--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 
 body{
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: #CCCCCC;
 }
 
@@ -108,8 +108,7 @@ header > ul {
 }
 
 .servicos h2{
-    padding-left: 3.3rem;
-    padding-bottom: 2rem;
+    margin-bottom: 3rem;
     text-align: center;
     text-shadow: navy 3px 0 10px;
     width: 100%;
@@ -145,7 +144,7 @@ header > ul {
 .sobre{
     background-color: rgba(0, 0, 0, 0.800);
     width: 100%;
-    height: 190vh;
+    height: 200vh;
     color: white;
     display: block;
     border: 0.1rem solid white;
@@ -275,7 +274,7 @@ form{
 
 table{
     display: inline-block;
-    margin-top: 2rem;
+    margin-top: 1rem;
     border: 0.1rem white solid;
 }
 
@@ -303,7 +302,11 @@ table td{
     width: 100%;
     text-align: center;
     color: white;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
 }
 
 .localizacao h2{
@@ -316,14 +319,10 @@ table td{
 }
 
 .localizacao p{
-    padding-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 
 .mapa{
-    display: inline-block;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     width: 45rem;
     border-radius: 20rem;
 }
@@ -347,3 +346,173 @@ footer p{
 footer p img{
     width: 2rem;
 }
+
+@media (max-width: 767px){
+    .divsobre img{
+        width: 17rem;
+    }
+    header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        position: absolute;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        height: 25rem;
+        z-index: +1;
+    }
+
+    .mapa{
+        width: 15rem;
+        height: 9rem;
+    }
+
+    .home{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        
+    }
+
+    .home h1{
+        position: relative;
+
+        
+    }
+
+    .beneficios{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
+
+    .beneficios img{
+        width: 16rem;
+        height: 9rem;
+        
+    }
+
+    .produtos li img{
+        width: 12rem;
+    }
+
+    .servicos h2{
+        padding-left: 0;
+
+    }
+
+    .produto_descricao{
+        font-size: 0.9rem;
+    }
+
+    .produto_preco{
+        font-size: 1.7rem;
+        margin-bottom: 1rem;
+    }
+
+    .contato table{
+        margin-top: 0.6rem;
+    }
+
+    .sobre{
+        height: 180vh;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .divsobre img{
+        width: 37rem;
+    }
+    header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        position: absolute;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        height: 25rem;
+        z-index: +1;
+    }
+
+    .mapa{
+        width: 30rem;
+        height: 20rem;
+    }
+
+    .home{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        
+    }
+
+    .home h1{
+        position: relative;
+
+        
+    }
+
+    .beneficios{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
+
+    .beneficios img{
+        width: 36rem;
+        height: 19rem;
+        
+    }
+
+    .produtos li img{
+        width: 12rem;
+    }
+
+    .servicos h2{
+        padding-left: 0;
+
+    }
+
+    .produto_descricao{
+        font-size: 0.9rem;
+    }
+
+    .produto_preco{
+        font-size: 1.7rem;
+        margin-bottom: 1rem;
+    }
+
+    .contato table{
+        margin-top: 0.6rem;
+    }
+
+    .sobre{
+        height: 210vh;
+    }
+
+
+}
+
